@@ -1,4 +1,6 @@
+MD5 4f24c43d1c580b46b0c4f5bf7073d227 digikamplugins-0.6.2.ebuild 715
 MD5 26ab54a823ca27a751387a364d5ed830 digikamplugins-0.6.2_rc1.ebuild 713
-MD5 216390b5412eab658120d555d8c96149 ChangeLog 402
+MD5 d40b9ff01cc657dc1558fe2e784cc40d ChangeLog 533
 MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
+MD5 ce60f2a3d44d388bab0ccb47535bc569 files/digest-digikamplugins-0.6.2 74
 MD5 287c2440cc9fb44a600b15cda6b5dcfa files/digest-digikamplugins-0.6.2_rc1 76
