@@ -1,0 +1,1 @@
+MD5 6a3990fe03f4d24f848ab9c1462688e5 digikamplugins-0.6.2.tar.bz2 1002118
